# Wireless_Sensor_Network_20231

./: .gitignore  Flow_Chart.drawio  README.md  WSN_Report.docx
FIRMWARE/GATEWAY/gateway/: CMakeLists.txt  Makefile  partitions4M.csv  sdkconfig  sdkconfig.old
FIRMWARE/GATEWAY/gateway/certs/: git_ota.pem
FIRMWARE/GATEWAY/gateway/html/: webserver.html
FIRMWARE/GATEWAY/gateway/main/: CMakeLists.txt  app_main.c
FIRMWARE/GATEWAY/gateway/main/cfg/: common.c  common.h
FIRMWARE/GATEWAY/gateway/main/fota/: fota.c  fota.h
FIRMWARE/GATEWAY/gateway/main/interface/: button.c  led.c
FIRMWARE/GATEWAY/gateway/main/mesh/: ble_mesh_user.h
FIRMWARE/GATEWAY/gateway/main/mqtt/: mqtt.c  mqtt.h
FIRMWARE/GATEWAY/gateway/main/smartcfg/: smartcfg.c  smartcfg.h
FIRMWARE/GATEWAY/gateway/main/spiffs/: spiffs.c  spiffs.h
FIRMWARE/GATEWAY/gateway/main/web_server/: web_server.c  web_server.h
FIRMWARE/GATEWAY/gateway/main/wifi/: wifi_ap.c  wifi_ap.h  wifi_sta.c
FIRMWARE/no_ble/gateway/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
FIRMWARE/no_ble/gateway/html/: webserver.html
FIRMWARE/no_ble/gateway/main/: CMakeLists.txt  app_main.c
FIRMWARE/no_ble/gateway/main/ble_mesh/: ble_mesh.c  ble_mesh.h
FIRMWARE/no_ble/gateway/main/cfg/: common.c  common.h
FIRMWARE/no_ble/gateway/main/fota/: fota.c
FIRMWARE/no_ble/gateway/main/interface/: button.c  button.h  led.c  led.h
FIRMWARE/no_ble/gateway/main/mesh/: ble_mesh_user.c
FIRMWARE/no_ble/gateway/main/mqtt/: mqtt.c  mqtt.h
FIRMWARE/no_ble/gateway/main/smartcfg/: smartcfg.c  smartcfg.h
FIRMWARE/no_ble/gateway/main/spiffs/: spiffs.c
FIRMWARE/no_ble/gateway/main/web_server/: web_server.c
FIRMWARE/no_ble/gateway/main/wifi/: wifi_ap.c  wifi_ap.h  wifi_sta.c  wifi_sta.h
HARDWARE/PCB_Project/: DEV_KIT.PrjPcb  PCB_Project.PrjPcb  main.SchDoc  project_sim_config.simcfg
HARDWARE/WSN_GATEWAY/GATEWAY/: Display.SchDoc  GATEWAY.BomDoc  GATEWAY.PrjPcb  GATEWAY.PrjPcbStructure  Main.PcbDoc  Main.SchDoc  NODE.PrjPcb  NODE.PrjPcbStructure  POWER.SchDoc  Sensor.SchDoc
HARDWARE/WSN_NODE/NODE/: CONN.SchDoc  Display.SchDoc  Main.SchDoc  NODE.PcbDoc  NODE.PrjPcb  NODE.PrjPcbStructure  NODE_v1.1.PcbDoc  Power.SchDoc  Sensor.SchDoc
HARDWARE/WSN_NODE_V1.1/WSN_V1.1/: CONN.SchDoc  Display.SchDoc  Main.SchDoc  Power.SchDoc  Sensor.SchDoc  WSN_v1.1.PrjPcb
REFERENCE/: Bluetooth Mesh_ The Ultimate Guide.html  Money.txt  REF_CIRCUIT.docx  WSN_Node.drawio  ~$F_CIRCUIT.docx
REFERENCE/Bluetooth Mesh_ The Ultimate Guide_files/: 6784603.js.tải xuống  87897.js.tải xuống  client.js.tải xuống  core.js.tải xuống  enlighterjs.min.css  f.txt  gtm.js.tải xuống  js  js(1)  js(2)  optimole_lib_no_poly.min.js.tải xuống  package-core-boot.js.tải xuống  package-tracker.js.tải xuống  premium-addons.min.css  track
REFERENCE/nrf52840/: 40AL..08.pcbdoc  840P..08.schdoc
SDK_DeviceDownload/examples/ble_peripheral/ble_app_beacon - Copy/pca10056/s140/arm5_no_packs/: ble_app_beacon_pca10056_s140.uvguix.NGUYEN VAN KHOI  ble_app_beacon_pca10056_s140.uvoptx  ble_app_beacon_pca10056_s140.uvprojx
SDK_DeviceDownload/examples/peripheral/01_test/pca10056/blank/arm5_no_packs/: blinky_pca10056.uvguix.Admin  blinky_pca10056.uvguix_Admin.bak  blinky_pca10056.uvoptx
SDK_DeviceDownload/examples/peripheral/01_test/pca10056/blank/arm5_no_packs/RTE/: RTE_Components.h
SDK_DeviceDownload/examples/peripheral/01_test/pca10056/blank/ses/: blinky_pca10056.emSession
SDK_DeviceDownload/examples/peripheral/blinky/pca10040/blank/ses/: blinky_pca10040.emSession  flash_placement.xml
SDK_DeviceDownload/examples/peripheral/blinky_freertos/pca10040/blank/ses/: blinky_FreeRTOS_pca10040.emSession
(+9 files in other folders)
